Fixed overlapping issue

--- a/src/components/UI/forms/forms.scss
+++ b/src/components/UI/forms/forms.scss
@@ -1,1 +1,7 @@
 @import "selector";
+
+.field {
+  .ui {
+    z-index: 0 !important;
+  }
+}
